Change the checks on status_code

--- a/.github/workflows/webui_rh_test.yml
+++ b/.github/workflows/webui_rh_test.yml
@@ -125,7 +125,7 @@ jobs:
          # START WEBUI
          runuser -l openquake -c '/opt/openquake/venv/bin/oq webui start 127.0.0.1:8800 -s &'
          echo "Waiting WEBUI up on port 8800...."
-         while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://127.0.0.1:8800/accounts/login/)" != "200" ]]; do
+         while [[ "$(curl -s -o /dev/null -w ''%{response_code}'' http://127.0.0.1:8800/accounts/login/)" != "200" ]]; do
            echo "Still waiting WEBUI account login up on port 8800...."
            sleep 5 # wait for 5 seconds before check again
          done
@@ -141,10 +141,10 @@ jobs:
          $CURL_BIN $LOGIN_URL -o /dev/null
          DJANGO_TOKEN="csrfmiddlewaretoken=$(grep csrftoken $COOKIES | sed 's/^.*csrftoken\s*//')"
          echo " perform login ..."
-         status_code=$($CURL_BIN -w "%{http_code}"\
+         status_code=$($CURL_BIN -w "%{response_code}"\
              -d "$DJANGO_TOKEN&username=$YOUR_USER&password=$YOUR_PASS" \
              -X POST $LOGIN_URL -o /dev/null)
-         if [ "$status_code" != "302" ]; then
+         if [ $status_code != "302" ]; then
            echo "Unable to login"
            exit 1
          fi
@@ -162,10 +162,10 @@ jobs:
          # Run a calc using https
          runuser -l openquake -c '/opt/openquake/venv/bin/oq engine --run https://downloads.openquake.org/jobs/risk_test.zip'
          sleep 5
-         status_code=$($CURL_BIN -w "%{http_code}"\
+         status_code=$($CURL_BIN -w "%{response_code}"\
              -d "$DJANGO_TOKEN&username=$YOUR_USER&password=$YOUR_PASS" \
              -v --fail -G http://127.0.0.1:8800/engine/1/outputs -o /dev/null)
-         if [ "$status_code" != "200" ]; then
+         if [ $status_code != "200" ]; then
            echo "Unable to visualize outputs"
            exit 1
          fi
@@ -175,27 +175,27 @@ jobs:
          sleep 5
          runuser -l openquake -c 'OQ_APPLICATION_MODE=PUBLIC /opt/openquake/venv/bin/oq webui start 127.0.0.1:8800 -s &'
          echo "Waiting WEBUI up on port 8800...."
-         while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://127.0.0.1:8800/engine/)" != "200" ]]; do
+         while [[ "$(curl -s -o /dev/null -w ''%{response_code}'' http://127.0.0.1:8800/engine/)" != "200" ]]; do
            echo "Still waiting WEBUI on port 8800...."
            sleep 5 # wait for 5 seconds before check again
          done
          echo -n "Test Standalone Tools pages (without authentication)"
-         status_code=$($CURL_BIN -w "%{http_code}"\
+         status_code=$($CURL_BIN -w "%{response_code}"\
              -v --fail -I -L -X GET http://127.0.0.1:8800/)
-         if [ "$status_code" != "301" ]; then
+         if [ $status_code != "301" ]; then
            # Supposed to redirect to http://127.0.0.1:8800/engine/
            echo "Unable to access the homepage"
            exit 1
          fi
-         status_code=$($CURL_BIN -w "%{http_code}"\
+         status_code=$($CURL_BIN -w "%{response_code}"\
              -v --fail -I -L -X GET http://127.0.0.1:8800/taxonomy)
-         if [ "$status_code" != "200" ]; then
+         if [ $status_code != "200" ]; then
            echo "Unable access the taxonomy standalone app"
            exit 1
          fi
-         status_code=$($CURL_BIN -w "%{http_code}"\
+         status_code=$($CURL_BIN -w "%{response_code}"\
              -v --fail -I -L -X GET http://127.0.0.1:8800/ipt)
-         if [ "$status_code" != "200" ]; then
+         if [ $status_code != "200" ]; then
            echo "Unable to access the ipt standalone app"
            exit 1
          fi
