--- a/.github/workflows/webui_rh_test.yml
+++ b/.github/workflows/webui_rh_test.yml
@@ -95,6 +95,7 @@ jobs:
     - name: Test WebUI and run https calculation
       run: |
          set -x
+         set -o pipefail
          source /opt/openquake/venv/bin/activate
          pip freeze
          mkdir -p /var/log/oq-engine/
@@ -125,7 +126,7 @@ jobs:
          # START WEBUI
          runuser -l openquake -c '/opt/openquake/venv/bin/oq webui start 127.0.0.1:8800 -s &'
          echo "Waiting WEBUI up on port 8800...."
-         while [[ "$(curl -s -o /dev/null -w ''%{response_code}'' http://127.0.0.1:8800/accounts/login/)" != "200" ]]; do
+         while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://127.0.0.1:8800/accounts/login/)" != "200" ]]; do
            echo "Still waiting WEBUI account login up on port 8800...."
            sleep 5 # wait for 5 seconds before check again
          done
@@ -141,7 +142,7 @@ jobs:
          $CURL_BIN $LOGIN_URL -o /dev/null
          DJANGO_TOKEN="csrfmiddlewaretoken=$(grep csrftoken $COOKIES | sed 's/^.*csrftoken\s*//')"
          echo " perform login ..."
-         status_code=$($CURL_BIN -w "%{response_code}"\
+         status_code=$($CURL_BIN -w "%{http_code}"\
              -d "$DJANGO_TOKEN&username=$YOUR_USER&password=$YOUR_PASS" \
              -X POST $LOGIN_URL -o /dev/null)
          if [ $status_code != "302" ]; then
@@ -162,7 +163,7 @@ jobs:
          # Run a calc using https
          runuser -l openquake -c '/opt/openquake/venv/bin/oq engine --run https://downloads.openquake.org/jobs/risk_test.zip'
          sleep 5
-         status_code=$($CURL_BIN -w "%{response_code}"\
+         status_code=$($CURL_BIN -w "%{http_code}"\
              -d "$DJANGO_TOKEN&username=$YOUR_USER&password=$YOUR_PASS" \
              -v --fail -G http://127.0.0.1:8800/engine/1/outputs -o /dev/null)
          if [ $status_code != "200" ]; then
@@ -175,25 +176,25 @@ jobs:
          sleep 5
          runuser -l openquake -c 'OQ_APPLICATION_MODE=PUBLIC /opt/openquake/venv/bin/oq webui start 127.0.0.1:8800 -s &'
          echo "Waiting WEBUI up on port 8800...."
-         while [[ "$(curl -s -o /dev/null -w ''%{response_code}'' http://127.0.0.1:8800/engine/)" != "200" ]]; do
+         while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://127.0.0.1:8800/engine/)" != "200" ]]; do
            echo "Still waiting WEBUI on port 8800...."
            sleep 5 # wait for 5 seconds before check again
          done
          echo -n "Test Standalone Tools pages (without authentication)"
-         status_code=$($CURL_BIN -w "%{response_code}"\
+         status_code=$($CURL_BIN -w "%{http_code}"\
              -v --fail -I -L -X GET http://127.0.0.1:8800/)
          if [ $status_code != "301" ]; then
            # Supposed to redirect to http://127.0.0.1:8800/engine/
            echo "Unable to access the homepage"
            exit 1
          fi
-         status_code=$($CURL_BIN -w "%{response_code}"\
+         status_code=$($CURL_BIN -w "%{http_code}"\
              -v --fail -I -L -X GET http://127.0.0.1:8800/taxonomy)
          if [ $status_code != "200" ]; then
            echo "Unable access the taxonomy standalone app"
            exit 1
          fi
-         status_code=$($CURL_BIN -w "%{response_code}"\
+         status_code=$($CURL_BIN -w "%{http_code}"\
              -v --fail -I -L -X GET http://127.0.0.1:8800/ipt)
          if [ $status_code != "200" ]; then
            echo "Unable to access the ipt standalone app"
