--- a/.github/workflows/webui_rh_test.yml
+++ b/.github/workflows/webui_rh_test.yml
@@ -94,7 +94,6 @@ jobs:
         done
     - name: WebUI and calculation with Auth
       run: |
-         set -x
          set -o pipefail
          source /opt/openquake/venv/bin/activate
          pip freeze
@@ -172,7 +171,6 @@ jobs:
 
     - name: WebUI on PUBLIC
       run: |
-         set -x
          set -o pipefail
          source /opt/openquake/venv/bin/activate
          echo "Restart WebUI without authentication"
@@ -185,20 +183,20 @@ jobs:
            sleep 5 # wait for 5 seconds before check again
          done
          echo -n "Test Standalone Tools pages (without authentication)"
-         status_code=$(curl -w "%{http_code}"\
+         status_code=$(curl -s -o /dev/null -w "%{http_code}"\
              -v --fail -I -L -X GET http://127.0.0.1:8800/)
          if [ $status_code != "301" ]; then
            # Supposed to redirect to http://127.0.0.1:8800/engine/
            echo "Unable to access the homepage"
            exit 1
          fi
-         status_code=$(curl -w "%{http_code}"\
+         status_code=$(curl -s -o /dev/null -w "%{http_code}"\
              -v --fail -I -L -X GET http://127.0.0.1:8800/taxonomy)
          if [ $status_code != "200" ]; then
            echo "Unable access the taxonomy standalone app"
            exit 1
          fi
-         status_code=$(curl -w "%{http_code}"\
+         status_code=$(curl -s -o /dev/null -w "%{http_code}"\
              -v --fail -I -L -X GET http://127.0.0.1:8800/ipt)
          if [ $status_code != "200" ]; then
            echo "Unable to access the ipt standalone app"
