remove --fail on curl since we test after the status code

--- a/.github/workflows/webui_rh_test.yml
+++ b/.github/workflows/webui_rh_test.yml
@@ -183,21 +183,18 @@ jobs:
            sleep 5 # wait for 5 seconds before check again
          done
          echo -n "Test Standalone Tools pages (without authentication)"
-         status_code=$(curl -s -o /dev/null -w "%{http_code}"\
-             -v --fail -I -L -X GET http://127.0.0.1:8800/)
+         status_code=$(curl -s -w "%{http_code}" -I -L http://127.0.0.1:8800/)
          if [ $status_code != "301" ]; then
            # Supposed to redirect to http://127.0.0.1:8800/engine/
            echo "Unable to access the homepage"
            exit 1
          fi
-         status_code=$(curl -s -o /dev/null -w "%{http_code}"\
-             -v --fail -I -L -X GET http://127.0.0.1:8800/taxonomy)
+         status_code=$(curl -s -w "%{http_code}" -I -L http://127.0.0.1:8800/taxonomy)
          if [ $status_code != "200" ]; then
            echo "Unable access the taxonomy standalone app"
            exit 1
          fi
-         status_code=$(curl -s -o /dev/null -w "%{http_code}"\
-             -v --fail -I -L -X GET http://127.0.0.1:8800/ipt)
+         status_code=$(curl -s -w "%{http_code}" -I -L  http://127.0.0.1:8800/ipt)
          if [ $status_code != "200" ]; then
            echo "Unable to access the ipt standalone app"
            exit 1
