--- a/docker/Dockerfile.engine
+++ b/docker/Dockerfile.engine
@@ -12,7 +12,7 @@
 #
 # You should have received a copy of the GNU Affero General Public License
 # along with OpenQuake. If not, see <http://www.gnu.org/licenses/>.
-FROM python:3.11.6-slim AS compile-image
+FROM python:3.12.6-slim AS compile-image
 LABEL maintainer="GEM Foundation <devops@openquake.org>" \
        vendor="GEM Foundation"
 RUN useradd -m -u 1000 -s /bin/bash openquake
@@ -24,19 +24,22 @@ RUN python3 -m venv $VIRTUAL_ENV
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 #clone repository and install engine
 RUN git clone https://github.com/gem/oq-engine.git --depth=1 --branch $oq_branch && cd oq-engine && \
-    pip --disable-pip-version-check install . -r requirements-py311-linux64.txt --no-warn-script-location
+    pip --disable-pip-version-check install . -r requirements-py312-linux64.txt --no-warn-script-location
 #
-FROM python:3.11.6-slim AS build-image
+FROM python:3.12.6-slim AS build-image
 COPY --from=compile-image /opt/openquake/ /opt/openquake/
-ENV LANG en_US.UTF-8
+ENV LANG=en_US.UTF-8
 ENV LOCKDOWN=False
-RUN useradd -m -u 1000 -s /bin/bash openquake
+RUN useradd -m -u 1000 -s /bin/bash openquake && \
+    chown -R openquake:openquake /opt/openquake
 USER openquake
-ENV HOME /home/openquake
+ENV HOME=/home/openquake
 WORKDIR ${HOME}
 ENV PATH="/opt/openquake/bin:$PATH"
 #
+ADD scripts/oq-start.sh ${HOME}
 RUN mkdir oqdata
-EXPOSE 8800:8800
+EXPOSE 8800
 STOPSIGNAL SIGINT
-ENTRYPOINT ["/bin/bash", "-c"]
+ENTRYPOINT ["./oq-start.sh"]
+CMD ["oq", "webui", "start", "0.0.0.0:8800", "-s"]
