Replace all instances of ARISTOTLE -> IMPACT

--- a/.github/workflows/engine_pr_test.yml
+++ b/.github/workflows/engine_pr_test.yml
@@ -231,7 +231,7 @@ jobs:
     env:
       GITHUB_HEAD_REF: ${{ github.head_ref }}
       FROM_FORK: ${{ github.event.pull_request.head.repo.fork }}
-      OQ_APPLICATION_MODE: ARISTOTLE
+      OQ_APPLICATION_MODE: IMPACT
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python  ${{ matrix.python-version }}
@@ -250,7 +250,7 @@ jobs:
           for file in openquake/server/templates/registration/*.impact.tmpl; do
               cp -- "$file" "${file%.impact.tmpl}"
           done
-      - name: Server 'ARISTOTLE' mode tests
+      - name: Server 'IMPACT' mode tests
         run: |
           set -x
           date
