--- a/openquake/qa_tests_data/classical/case_90/job.ini
+++ b/openquake/qa_tests_data/classical/case_90/job.ini
@@ -1,6 +1,6 @@
 [general]
 
-description = case_89 infer basin params using GMM vs30 to z1pt0 or z2pt5
+description = case_90 use conditional GMPEs specified within a ModifiableGMPE
 calculation_mode = classical
 random_seed = 23
 
@@ -32,9 +32,10 @@ source_model_logic_tree_file = ssmLT.xml
 gsim_logic_tree_file = conditional_gmpes.xml
 investigation_time = 1.0
 intensity_measure_types_and_levels = {"PGA": logscale(0.005, 3.00, 25),
+                                      "PGV": logscale(0.1, 200, 25),
                                       "SA(0.2)": logscale(0.005, 3.00, 25),
                                       "SA(1.0)": logscale(0.005, 3.00, 25),
-                                      "IA": logscale(0.005, 3.00, 25)}
+                                      "IA": logscale(0.001, 10, 25)}
 truncation_level = 5.0
 horiz_comp_to_geom_mean = true
 maximum_distance = 300
