--- a/openquake/engine/openquake.cfg
+++ b/openquake/engine/openquake.cfg
@@ -15,7 +15,7 @@
 
 [distribution]
 # set zmq if you have a cluster
-oq_distribute = no
+oq_distribute = processpool
 serialize_jobs = 1
 # num_cores = 1
 # log level for jobs spawned by the WebAPI
