--- a/.github/workflows/engine_pr_test.yml
+++ b/.github/workflows/engine_pr_test.yml
@@ -168,7 +168,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: playwright-artifacts
-          path: .playwright
+          path: test-results
+          retention-days: 7
 
   server_read_only_mode:
     runs-on: ${{ matrix.os }}
@@ -254,7 +255,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: playwright-artifacts
-          path: .playwright
+          path: test-results
+          retention-days: 7
 
   server_impact_mode:
     runs-on: ${{ matrix.os }}
