Changed the workflow framework

--- a/openquake/qa_tests_data/mosaic_for_ses/ses.toml
+++ b/openquake/qa_tests_data/mosaic_for_ses/ses.toml
@@ -1,4 +1,5 @@
 [workflow]
+description = "global SES mockup"
 calculation_mode = "event_based"
 ground_motion_fields = false
 number_of_logic_tree_samples = 200
