--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,5 @@
 markers =
   slow: a slow test
 addopts = --tb short
+consider_namespace_packages = true
 DJANGO_SETTINGS_MODULE = openquake.server.settings
