--- a/openquake/qa_tests_data/classical/case_91/job.ini
+++ b/openquake/qa_tests_data/classical/case_91/job.ini
@@ -28,9 +28,9 @@ investigation_time = 50.0
 # SA(0.1) is specified to check no overwrite by AvgSA(0.1) (same .period attr)
 intensity_measure_types_and_levels = {
     "AvgSA(0.1)": logscale(0.005, 4.00, 10),
+    "SA(0.1)": logscale(0.005, 4.00, 10),
     "AvgSA(0.75)": logscale(0.005, 4.0, 10),
-    "AvgSA(2.0)": logscale(0.005, 4.0, 10),
-    "SA(0.1)": logscale(0.005, 4.00, 10)
+    "AvgSA(2.0)": logscale(0.005, 4.0, 10)
     }
 truncation_level = 3
 maximum_distance = 200.0
