--- a/openquake/qa_tests_data/classical/case_34/job.ini
+++ b/openquake/qa_tests_data/classical/case_34/job.ini
@@ -25,7 +25,8 @@ area_source_discretization = 10.0
 source_model_logic_tree_file = source_model_logic_tree.xml
 gsim_logic_tree_file = gmpe_logic_tree.xml
 investigation_time = 50.0
-intensity_measure_types_and_levels = {"AvgSA": logscale(0.005, 4.00, 20)}
+intensity_measure_types_and_levels = {"AvgSA": logscale(0.005, 4.00, 20),
+                                      "SA(2.0)": logscale(0.005, 4.00, 20)}
 truncation_level = 3
 maximum_distance = 200.0
 
