--- a/openquake/engine/openquake.cfg
+++ b/openquake/engine/openquake.cfg
@@ -43,9 +43,9 @@ avg_losses_max = 900_000_000
 # store at most 8 GB, good if you have 32 GB total and 16 threads
 conditioned_gmf_gb = 8
 
-# parallel tiling parameters, by default pmap_max_gb=num_cores/8
-# notice that there are 2 pmaps per core defined at the same time
-pmap_max_gb =
+# parallel tiling parameters, the default 10 GB is perfect, if you
+# increase it saving the RateMap will become too slow
+pmap_max_gb = 10
 pmap_max_mb = 750
 
 # limit when computing hazard curves from GMFs
