--- a/openquake/engine/openquake.cfg
+++ b/openquake/engine/openquake.cfg
@@ -43,9 +43,7 @@ avg_losses_max = 900_000_000
 # store at most 8 GB, good if you have 32 GB total and 16 threads
 conditioned_gmf_gb = 8
 
-# parallel tiling parameters, the default 10 GB is perfect, if you
-# increase it saving the RateMap will become too slow
-pmap_max_gb = 10
+# reduce it to save memory
 pmap_max_mb = 750
 
 # limit when computing hazard curves from GMFs
