--- a/openquake/qa_tests_data/classical/case_92/job.ini
+++ b/openquake/qa_tests_data/classical/case_92/job.ini
@@ -1,6 +1,6 @@
 [general]
 
-description = Classical PSHA — using Indirect AvgSA GMPE with non-AvgSA IMTs also in job file
+description = Classical PSHA — using Indirect AvgSA GMPE with NO AvgSA IMTs in job file
 calculation_mode = classical
 random_seed = 23
 
@@ -25,12 +25,11 @@ area_source_discretization = 10.0
 source_model_logic_tree_file = source_model_logic_tree.xml
 gsim_logic_tree_file = gmpe_logic_tree.xml
 investigation_time = 50.0
-# SA(0.1) is specified to check no overwrite by AvgSA(0.1) (same .period attr)
+# No AvgSA IMTs because checking edge case where using indirect AvgSA but no AvgSA IMTs
 intensity_measure_types_and_levels = {
-    "AvgSA(0.1)": logscale(0.005, 4.00, 10),
+    "PGA": logscale(0.005, 4.00, 10),
     "SA(0.1)": logscale(0.005, 4.00, 10),
-    "AvgSA(0.75)": logscale(0.005, 4.0, 10),
-    "AvgSA(2.0)": logscale(0.005, 4.0, 10)
+    "SA(0.2)": logscale(0.005, 4.00, 10),
     }
 truncation_level = 3
 maximum_distance = 200.0
