--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,8 +3,7 @@ include README.md LICENSE CONTRIBUTORS.txt
 # OpenQuake config file
 include openquake/engine/openquake.cfg
 # demos folder
-recursive-include demos/hazard *.* 
-recursive-include demos/risk *.* 
+graft demos
 
 # OpenQuake server config examples
 include openquake/server/local_settings.py.pam
