--- a/.github/workflows/engine_nightly_user.yml
+++ b/.github/workflows/engine_nightly_user.yml
@@ -109,7 +109,7 @@ jobs:
           wget https://downloads.openquake.org/test_data/exposure.hdf5
           oq_basedir=$(python -c "from openquake import baselib; print(baselib.__path__[0].rsplit('/', 2)[0])")
           mv exposure.hdf5 $oq_basedir/openquake/qa_tests_data/mosaic/
-          for file in $oq_basedir/openquake/server/templates/registration/*.impact.tmpl; do
+          for file in $oq_basedir/openquake/server/templates/registration/*.default.tmpl; do
               cp -- "$file" "${file%.impact.tmpl}"
           done
           set -x
