Fix call to manage.py

--- a/.github/workflows/engine_nightly_user.yml
+++ b/.github/workflows/engine_nightly_user.yml
@@ -114,7 +114,7 @@ jobs:
           done
           set -x
           oq --version
-          $oq_basedir/openquake/server/manage.py migrate
+          python $oq_basedir/openquake/server/manage.py migrate
           touch ~/webui-access.log
           pip install https://wheelhouse.openquake.org/v3/py/pytest_django-4.9.0-py3-none-any.whl
           pip install pytest-playwright
