Raised pmap_max_mb

--- a/openquake/engine/openquake.cfg
+++ b/openquake/engine/openquake.cfg
@@ -43,8 +43,8 @@ avg_losses_max = 900_000_000
 # store at most 8 GB, good if you have 32 GB total and 16 threads
 conditioned_gmf_gb = 8
 
-# reduce it to save memory; it governs max_rbytes in tiling
-pmap_max_mb = 750
+# increasing it, increases the memory; reducing it has no effect :-(
+pmap_max_mb = 1000
 
 # limit when computing hazard curves from GMFs
 gmf_data_rows = 40_000_000
