--- a/.github/workflows/engine_nightly_webui.yml
+++ b/.github/workflows/engine_nightly_webui.yml
@@ -15,7 +15,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-24.04]
-        python-version: ["3.11", "3.12"]
+        # python-version: ["3.11", "3.12"]
+        python-version: ["3.12"]
     env:
       GITHUB_HEAD_REF: ${{ github.head_ref }}
       OQ_APPLICATION_MODE: IMPACT
