--- a/.github/workflows/engine_nightly_webui.yml
+++ b/.github/workflows/engine_nightly_webui.yml
@@ -15,8 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-24.04]
-        # python-version: ["3.11", "3.12"]
-        python-version: ["3.12"]
+        python-version: ["3.11", "3.12"]
     env:
       GITHUB_HEAD_REF: ${{ github.head_ref }}
       OQ_APPLICATION_MODE: IMPACT
@@ -80,6 +79,6 @@ jobs:
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-artifacts
+          name: playwright-artifacts-${{ matrix.python-version }}
           path: test-results
           retention-days: 7
