--- a/.github/workflows/engine_nightly_webui.yml
+++ b/.github/workflows/engine_nightly_webui.yml
@@ -13,6 +13,7 @@ jobs:
   server_impact_mode:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-24.04]
         python-version: ["3.11", "3.12"]
@@ -79,6 +80,6 @@ jobs:
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-artifacts-${{ matrix.python-version }}
+          name: playwright-artifacts-python${{ matrix.python-version }}
           path: test-results
           retention-days: 7
