Changed get_num_chunks to depend on pmap_max_mb

--- a/openquake/engine/openquake.cfg
+++ b/openquake/engine/openquake.cfg
@@ -44,6 +44,7 @@ avg_losses_max = 900_000_000
 conditioned_gmf_gb = 8
 
 # increasing it, increases the memory; reducing it has no effect :-(
+# it affect the splitting in tiles and the number of chunks in classical
 pmap_max_mb = 1000
 
 # limit when computing hazard curves from GMFs
