--- a/openquake/qa_tests_data/classical/case_01/job.ini
+++ b/openquake/qa_tests_data/classical/case_01/job.ini
@@ -4,6 +4,7 @@ description = Classical Hazard QA Test, Case 1
 calculation_mode = classical
 source_nodes = pointSource
 minimum_engine_version = 3.23
+max_sites_disagg = 1
 
 [geometry]
 
