Differentiate playwright arifacts name by python version, os and application mode; add a note about IMPACT tests being in a nightly action

--- a/.github/workflows/engine_nightly_webui.yml
+++ b/.github/workflows/engine_nightly_webui.yml
@@ -80,6 +80,6 @@ jobs:
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-artifacts-python${{ matrix.python-version }}
+          name: playwright-artifacts-impact-python${{ matrix.python-version }}-{{ matrix.os }}
           path: test-results
           retention-days: 7
