--- a/.github/workflows/engine_pr_test.yml
+++ b/.github/workflows/engine_pr_test.yml
@@ -167,7 +167,7 @@ jobs:
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-artifacts
+          name: playwright-artifacts-restricted-python${{ matrix.python-version }}-{{ matrix.os }}
           path: test-results
           retention-days: 7
 
@@ -254,7 +254,7 @@ jobs:
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-artifacts
+          name: playwright-artifacts-aelo-python${{ matrix.python-version }}-{{ matrix.os }}
           path: test-results
           retention-days: 7
 
@@ -299,3 +299,4 @@ jobs:
           touch ~/webui-access.log
           pip install https://wheelhouse.openquake.org/v3/py/pytest_django-4.9.0-py3-none-any.whl
           pytest -v openquake/server/tests/test_impact_mode.py
+          # NOTE: playwright tests for IMPACT are slow, so they run nightly in a separate action
