--- a/.github/workflows/engine_weekly_test.yml
+++ b/.github/workflows/engine_weekly_test.yml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-24.04]
-        python-version: ["3.11", "3.12"]
+        python-version: ["3.11", "3.12", "3.13"]
     steps:
       # This Checkout use git-ref keyword from dispatch
       - name: Clone Repository (Master)
