--- a/.github/workflows/macos_m1_install.yml
+++ b/.github/workflows/macos_m1_install.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [m1]
-        python-version: ["3.11", "3.12"]
+        python-version: ["3.11", "3.12", "3.13"]
     steps:
       # This Checkout use git-ref keyword from dispatch
       - name: Clone Repository (Master)
