--- a/.github/workflows/windows_test.yml
+++ b/.github/workflows/windows_test.yml
@@ -25,7 +25,7 @@ jobs:
       matrix:
         #os: [windows-2022, windows-2025]
         os: [windows-2022]
-        python-version: ["3.11", "3.12"]
+        python-version: ["3.11", "3.12", "3.13"]
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v4
