--- a/.github/workflows/engine_weekly_test.yml
+++ b/.github/workflows/engine_weekly_test.yml
@@ -145,7 +145,8 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-24.04]
-        python-version: ["3.11", "3.12"]
+        python-version: ["3.11", "3.12", "3.13"]
+
     steps:
       # This Checkout use git-ref keyword from dispatch
       - name: Clone Repository (Master)
@@ -189,7 +190,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-24.04]
-        python-version: ["3.11", "3.12"]
+        python-version: ["3.11", "3.12", "3.13"]
     steps:
       # This Checkout use git-ref keyword from dispatch
       - name: Clone Repository (Master)
@@ -237,7 +238,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-24.04]
-        python-version: ["3.11", "3.12"]
+        python-version: ["3.11", "3.12", "3.13"]
     env:
       GITHUB_HEAD_REF: ${{ github.head_ref }}
       FROM_FORK: ${{ github.event.pull_request.head.repo.fork }}
@@ -293,7 +294,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-24.04]
-        python-version: ["3.11", "3.12"]
+        python-version: ["3.11", "3.12", "3.13"]
     env:
       OQ_APPLICATION_MODE: READ_ONLY
     steps:
@@ -337,7 +338,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-24.04]
-        python-version: ["3.11", "3.12"]
+        python-version: ["3.11", "3.12", "3.13"]
     env:
       OQ_APPLICATION_MODE: AELO
       OQ_CONFIG_FILE: openquake/server/tests/data/openquake.cfg
@@ -390,7 +391,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-24.04]
-        python-version: ["3.11", "3.12"]
+        python-version: ["3.11", "3.12", "3.13"]
     env:
       GITHUB_HEAD_REF: ${{ github.head_ref }}
       FROM_FORK: ${{ github.event.pull_request.head.repo.fork }}
