Fixed all tests

--- a/openquake/qa_tests_data/disagg/case_3/job.ini
+++ b/openquake/qa_tests_data/disagg/case_3/job.ini
@@ -21,6 +21,7 @@ number_of_logic_tree_samples = 0
 [erf]
 # km
 rupture_mesh_spacing = 15
+complex_fault_mesh_spacing = 15
 width_of_mfd_bin = 0.1
 # km
 area_source_discretization = 15
