--- a/openquake/qa_tests_data/disagg/case_4/job.ini
+++ b/openquake/qa_tests_data/disagg/case_4/job.ini
@@ -16,6 +16,7 @@ number_of_logic_tree_samples = 2
 
 # km
 rupture_mesh_spacing = 5
+complex_fault_mesh_spacing = 5
 width_of_mfd_bin = 0.2
 # km
 area_source_discretization = 10
