--- a/openquake/qa_tests_data/event_based/case_10/job.ini
+++ b/openquake/qa_tests_data/event_based/case_10/job.ini
@@ -14,6 +14,7 @@ gsim_logic_tree_file = logic_tree_gmpe_simplified.xml
 [Hazard model]
 width_of_mfd_bin = 0.2
 rupture_mesh_spacing = 5.0
+complex_fault_mesh_spacing = 5.0
 area_source_discretization = 10.0
 
 [Site conditions]
