--- a/openquake/qa_tests_data/event_based_risk/case_miriam/job.ini
+++ b/openquake/qa_tests_data/event_based_risk/case_miriam/job.ini
@@ -19,6 +19,7 @@ number_of_logic_tree_samples = 0
 
 # km
 rupture_mesh_spacing = 10
+complex_fault_mesh_spacing = 10
 width_of_mfd_bin = 0.2
 
 [site_params]
