--- a/openquake/qa_tests_data/logictree/case_20/job_bis.ini
+++ b/openquake/qa_tests_data/logictree/case_20/job_bis.ini
@@ -18,6 +18,7 @@ number_of_logic_tree_samples = 0
 
 # km
 rupture_mesh_spacing = 2.0
+complex_fault_mesh_spacing = 2.0
 # Not used in this test case:
 width_of_mfd_bin = 1.0
 # km - Not used in this case
