--- a/openquake/qa_tests_data/classical/case_37/job.ini
+++ b/openquake/qa_tests_data/classical/case_37/job.ini
@@ -11,6 +11,7 @@ number_of_logic_tree_samples = 0
 [erf]
 
 rupture_mesh_spacing = 5
+complex_fault_mesh_spacing = 5
 width_of_mfd_bin = 0.1
 
 [site_params]
