--- a/openquake/qa_tests_data/logictree/case_07/sampling.ini
+++ b/openquake/qa_tests_data/logictree/case_07/sampling.ini
@@ -19,6 +19,7 @@ number_of_logic_tree_samples = 1000
 
 # km
 rupture_mesh_spacing = 0.1
+complex_fault_mesh_spacing = 0.1
 # Not used in this test case:
 width_of_mfd_bin = 1.0
 # km
