--- a/openquake/qa_tests_data/logictree/case_19/job.ini
+++ b/openquake/qa_tests_data/logictree/case_19/job.ini
@@ -18,6 +18,7 @@ number_of_logic_tree_samples = 0
 
 # km
 rupture_mesh_spacing = 20
+complex_fault_mesh_spacing = 20
 width_of_mfd_bin = 0.2
 # km
 area_source_discretization = 20
