--- a/demos/hazard/CharacteristicFaultSourceCase3ClassicalPSHA/job.ini
+++ b/demos/hazard/CharacteristicFaultSourceCase3ClassicalPSHA/job.ini
@@ -16,6 +16,7 @@ number_of_logic_tree_samples = 0
 [erf]
 
 rupture_mesh_spacing = 2
+complex_fault_mesh_spacing = 5
 width_of_mfd_bin = 0.1
 area_source_discretization = 5.0
 
