--- a/demos/hazard/ComplexFaultSourceClassicalPSHA/job.ini
+++ b/demos/hazard/ComplexFaultSourceClassicalPSHA/job.ini
@@ -15,9 +15,8 @@ number_of_logic_tree_samples = 0
 
 [erf]
 
-rupture_mesh_spacing = 5.
+complex_fault_mesh_spacing = 5.
 width_of_mfd_bin = 0.1
-area_source_discretization = 5.0
 
 [site_params]
 
