--- a/openquake/qa_tests_data/classical/case_93/job.ini
+++ b/openquake/qa_tests_data/classical/case_93/job.ini
@@ -1,5 +1,5 @@
 [general]
-description = Classical hazard for all site
+description = Test indirect AvgSA classes with GMPE tables as underlying GSIMs
 calculation_mode = classical
 random_seed = 42
 
@@ -17,7 +17,10 @@ site_model_file = site_model_by_ASSCM.csv
 source_model_logic_tree_file = source_models/nsha23_source_model_logic_tree.xml
 gsim_logic_tree_file = gmmLT_avgsa.xml
 investigation_time = 1.0
-intensity_measure_types_and_levels = {"SA(0.5)": logscale(0.001, 1.5, 20),
+intensity_measure_types_and_levels = {"AvgSA(0.5)": logscale(0.001, 1.5, 20),
+                                      "AvgSA(1.0)": logscale(0.001, 1.5, 20),
+                                      "AvgSA(2.0)": logscale(0.001, 1.5, 20),
+                                      "SA(0.5)": logscale(0.001, 1.5, 20),
                                       "SA(1.0)": logscale(0.001, 1.5, 20),
                                       "SA(2.0)": logscale(0.001, 1.5, 20)}
 truncation_level = 3.0
