--- a/demos/hazard/ComplexFaultSourceClassicalPSHA/job.ini
+++ b/demos/hazard/ComplexFaultSourceClassicalPSHA/job.ini
@@ -15,7 +15,8 @@ number_of_logic_tree_samples = 0
 
 [erf]
 
-complex_fault_mesh_spacing = 5.
+rupture_mesh_spacing = 2
+complex_fault_mesh_spacing = 2
 width_of_mfd_bin = 0.1
 
 [site_params]
